--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -4,32 +4,32 @@
 
 html,
 body {
-    height: 100%;
-    font-family: "Causten";
-    font-size: 18px;
-    color: #807d7e;
-    width: auto;
-    color: #000;
+  height: 100%;
+  font-family: "Causten";
+  font-size: 18px;
+  color: #807d7e;
+  width: auto;
+  color: #000;
 }
 .wraper {
-    overflow: clip;
-    min-height: 100%;
-    position: relative;
+  overflow: clip;
+  min-height: 100%;
+  position: relative;
 }
 .main {
 }
 [class*="__container"] {
-    max-width: 1200px;
-    margin: 0 auto;
-    box-sizing: content-box;
-    padding: 0 15px;
+  max-width: 1200px;
+  margin: 0 auto;
+  box-sizing: content-box;
+  padding: 0 15px;
 }
 .footer {
-    height: 200px;
+  height: 200px;
 }
 /* ================================================ */
 .wraper__module {
-    background-color: #0e333d;
+  background-color: #0e333d;
 }
 .page__container {
 }
@@ -39,153 +39,125 @@ body {
 }
 
 .module__titles {
-    margin-bottom: 77px;
+  margin-bottom: 77px;
 }
 .section--most {
-    margin-bottom: 62px;
+  margin-bottom: 62px;
 }
 .module__title {
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 127%; /* 60.96px */
-    margin-bottom: 23px;
-    padding: 0 15px;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 127%; /* 60.96px */
+  margin-bottom: 23px;
+  /* padding: 0 15px; */
 }
 
 .module__subtitle {
-    color: #ebebeb;
-    font-family: "Raleway";
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 127%; /* 25.4px */
+  color: #ebebeb;
+  font-family: "Raleway";
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 127%; /* 25.4px */
 }
 .grey--text {
-    color: #818181;
+  color: #818181;
 }
 .module__subtitle:not(:last-child) {
-    margin-bottom: 34px;
+  margin-bottom: 34px;
 }
 .module__list {
 }
 .list-module {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 41px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 41px;
 }
 .list-module__item {
-    position: relative;
+  position: relative;
 
-    font-family: "Raleway";
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 127%; /* 22.86px */
-    cursor: pointer;
+  font-family: "Raleway";
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 127%; /* 22.86px */
+  cursor: pointer;
 }
 .list-module__item::before {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 1px;
-    bottom: 0;
-    left: 0;
-    background-color: #fff;
-    transition: width 0.3s ease;
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  transition: width 0.3s ease;
 }
 .list-module__item:hover::before {
-    width: 100%;
+  width: 100%;
 }
-@media (max-width: 839.98px) {
-    .module__titles {
-        margin-bottom: 50px;
-    }
-    .module__title {
-        font-size: 40px;
-    }
-    .list-module {
-        gap: 32px;
-    }
-}
-@media (max-width: 479.98px) {
-    .module__titles {
-        margin-bottom: 44px;
-    }
-    .module__title {
-        font-size: 36px;
-        margin-bottom: 18px;
-    }
-    .list-module {
-        gap: 25px;
-    }
-    .module__subtitle {
-        font-size: 18px;
-        margin-bottom: 22px;
-    }
-    .list-module__item {
-        font-size: 16px;
-    }
-}
-
 .module__items {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px 2.66%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px 2.66%;
 }
 .module__items:not(:last-child) {
-margin-bottom: 76px;
+  margin-bottom: 76px;
 }
 .module__column {
-    flex: 0 0 23%;
-    cursor: pointer;
+  flex: 0 0 23%;
+  cursor: pointer;
 }
+
 .module__item {
 }
 
 .item__image,
 .item__img {
-    position: relative;
-    overflow: hidden;
-    border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 5px;
 }
 .item__image img,
 .item__img img {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    aspect-ratio: 270 / 270;
-    transform: scale(1.01);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 270 / 270;
+  transform: scale(1.01);
 }
 .item__image img {
-    object-fit: cover;
-    transition: transform 0.3s ease-in-out;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
 }
 .item__img img {
-    object-fit: contain;
+  object-fit: contain;
 }
 .item__image::before {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    bottom: 0%;
-    left: 0;
-    width: 100%;
-    height: 0%;
-    background-color: #33333346;
-    transition: height 0.2s ease-in-out;
-    transform: rotate(90deg);
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: 0%;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background-color: #33333346;
+  transition: height 0.2s ease-in-out;
+  transform: rotate(90deg);
 }
-.item__image:hover::before {
-    height: 100%;
-}
-.item__image:hover img {
-    transform: scale(1.1);
-}
+
 .item__image:not(:last-child) {
-    margin-bottom: 17px;
+  margin-bottom: 17px;
 }
 .column--hover {
-    position: relative;
+  position: relative;
 }
-.column--hover::before {
+@media (hover: hover) {
+  .item__image:hover::before {
+    height: 100%;
+  }
+  .item__image:hover img {
+    transform: scale(1.1);
+  }
+  .column--hover::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -196,70 +168,191 @@ margin-bottom: 76px;
     z-index: 2;
     opacity: 0;
     transition: opacity 0.2s ease;
-}
-.column--hover:hover::before {
+  }
+  .column--hover:hover::before {
     opacity: 1;
+  }
 }
+
 .item__info {
 }
 .item__name,
 .item__price {
-    font-family: "Cormorant Infant";
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 140%; /* 33.6px */
+  font-family: "Cormorant Infant";
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 140%; /* 33.6px */
 }
 .item__name:not(:last-child) {
-    margin-bottom: 4px;
+  margin-bottom: 4px;
 }
 .item__price {
 }
-@media (min-width: 899.98px) {
-    .module {
-        padding: 94px 0;
-    }
-}
-@media (max-width: 899.98px) {
-    .module {
-        padding: 50px 0;
-    }
-    .module__column {
-        flex: 0 1 48.65%;
-    }
-    .item__name,
-    .item__price {
-        font-size: 20px;
-    }
-    .item__image:not(:last-child) {
-        margin-bottom: 12px;
-    }
-    .module__items {
-        row-gap: 20px;
-    }
-}
-@media (max-width: 479.98px) {
-    .module {
-        padding: 25px 0;
-    }
-    .module__column {
-        flex: 0 1 100%;
-    }
-}
+
 .module__button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .module__btn {
+  margin: 0 auto;
+  padding: 12px 42.5px;
+  color: #fff;
+  font-family: "Ubuntu";
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 30px; /* 187.5% */
+  background-color: #ff7a49;
+}
+.popular__titles {
+  margin-bottom: 53px;
+}
+.popular__title {
+  color: #000;
+  font-family: "DM Serif Text";
+  font-size: 58px;
+  line-height: 100%; /* 58px */
+}
+.popular__title:not(:last-child) {
+  margin-bottom: 27px;
+}
+.popular__subtitle {
+  color: #606060;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 180%; /* 36px */
+}
+.popular__items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px 3.5%;
+}
+.popular__column {
+  flex: 0 0 31%;
+  cursor: pointer;
+}
+.item__name--popular {
+  color: #000;
+  font-family: "DM Serif Text";
+  font-size: 24px;
+  line-height: 28.8px; /* 120% */
+}
+.item__name:not(:last-child) {
+  margin-bottom: 16px;
+}
+.item__text {
+  color: #000;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  line-height: 160%; /* 25.6px */
+}
+.item__text:not(:last-child) {
+  margin-bottom: 8px;
+}
+.item__link {
+  flex: 1 1 auto;
+  position: relative;
+  color: #f55529;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 24px; /* 150% */
+  width: 100%;
+  padding: 5px 0;
+}
+.item__link::before {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 50%;
+  background: #f55529 url(../img/icons/arrow.svg) 50% no-repeat;
+  transition: transform 0.3s ease, right 0.3s ease;
+}
+@media (hover: hover) {
+  .item__link:hover::before {
+    transform: scale(1.1);
+    right: 10px;
+  }
+}
+.fit--cover {
+  object-fit: cover;
+}
 
-    margin: 0 auto;
-    padding: 12px 42.5px;
-    color: #fff;
-    font-family: "Ubuntu";
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 30px; /* 187.5% */
-    background-color: #FF7A49;
+.item__image--popular img {
+  aspect-ratio: 357 / 240;
+  object-position: 0 25%;
+}
 
-
+@media (min-width: 899.98px) {
+  .module {
+    padding: 94px 0;
+  }
+}
+@media (max-width: 899.98px) {
+  .module {
+    padding: 50px 0;
+  }
+  .module__column {
+    flex: 0 1 48.65%;
+  }
+  .popular__column {
+    flex: 0 1 48.25%;
+  }
+  .item__name,
+  .item__price {
+    font-size: 20px;
+  }
+  .item__image:not(:last-child) {
+    margin-bottom: 12px;
+  }
+  .module__items {
+    row-gap: 20px;
+  }
+}
+@media (max-width: 839.98px) {
+  .module__titles {
+    margin-bottom: 50px;
+  }
+  .module__title,
+  .popular__title {
+    font-size: 40px;
+  }
+  .list-module {
+    gap: 32px;
+  }
+}
+@media (max-width: 479.98px) {
+  .module__titles,
+  .popular__titles {
+    margin-bottom: 44px;
+  }
+  .module__title,
+  .popular__title {
+    font-size: 36px;
+    margin-bottom: 18px;
+  }
+  .list-module {
+    gap: 25px;
+  }
+  .module__subtitle,
+  .popular__subtitle {
+    font-size: 20px;
+    margin-bottom: 22px;
+  }
+  .list-module__item {
+    font-size: 18px;
+  }
+  .module {
+    padding: 25px 0;
+  }
+  .module__column,
+  .popular__column {
+    flex: 0 1 100%;
+  }
 }
