fixed a bug with the background in block 3

--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -204,6 +204,10 @@ body {
   line-height: 30px; /* 187.5% */
   background-color: #ff7a49;
 }
+.popular {
+  background: #fefaf4;
+  padding: 80px 0 114px;
+}
 .popular__titles {
   margin-bottom: 53px;
 }
