--- a/lesson_18/css/fonts.css
+++ b/lesson_18/css/fonts.css
@@ -1,8 +1,9 @@
-/* @import url("https://fonts.googleapis.com/css?family=Merriweather:regular,700,700italic&display=swap"); */
-/* @import url("https://fonts.googleapis.com/css?family=Inter:regular,700,800&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Cormorant+Infant:regular,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Merriweather:regular,700,700italic&display=swap");
 @import url("https://fonts.googleapis.com/css?family=DM+Serif+Text:regular&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Inter:regular,700,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Cormorant+Infant:600,700&display=swap");
+/*@import url("https://fonts.googleapis.com/css?family=Cormorant+Infant:regular,700&display=swap");*/
+/* @import url("https://fonts.googleapis.com/css?family=Ubuntu&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Raleway:500,600,700&display=swap"); */
 /* Підключення вручну */
 /* @font-face {
