--- a/lesson_18/css/style.css
+++ b/lesson_18/css/style.css
@@ -5,11 +5,11 @@
 html,
 body {
   height: 100%;
-  font-family: "Causten";
-  font-size: 18px;
-  color: #807d7e;
+  font-family: "Cormorant Infant";
+  font-size: 22px;
+  color: #727272;
   width: auto;
-  color: #000;
+  background-color: #fff9f4;
 }
 .wraper {
   overflow: clip;
@@ -19,7 +19,7 @@ body {
 .main {
 }
 [class*="__container"] {
-  max-width: 1200px;
+  max-width: 1215px;
   margin: 0 auto;
   box-sizing: content-box;
   padding: 0 15px;
@@ -28,3 +28,135 @@ body {
   height: 200px;
 }
 /* ================================================ */
+.header {
+  font-family: "Merriweather", sans-serif;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgba(131, 131, 131, 0.21);
+  width: 100%;
+  min-height: 106px;
+  top: 0;
+  left: 0;
+  padding: 5px 0 5px;
+  z-index: 50;
+}
+.header__container {
+  width: 100%;
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.header__logo {
+  color: #000;
+  font-size: 30px;
+  font-style: italic;
+  font-weight: 700;
+  flex-shrink: 0;
+}
+.menu {
+  flex: 1 1 auto;
+}
+.menu__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px 36px;
+}
+.menu__item {
+}
+.menu__link {
+  position: relative;
+  font-size: 20px;
+  color: #000;
+  transition: color 0.3s;
+}
+.menu__item--active .menu__link {
+  font-weight: 700;
+  text-decoration-line: underline;
+}
+@media (any-hover: hover) {
+  .menu__item:hover .menu__link {
+    text-decoration-line: underline;
+  }
+}
+.menu__item--parent {
+  position: relative;
+}
+.menu__item--parent .menu__link {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.menu__item--parent .menu__link::after {
+  content: "";
+  background: url(../img/icons/sub-menu-arrow.png) 0 0 no-repeat;
+  width: 16px;
+  height: 8px;
+  flex: 0 0 16px;
+  transition: transform 0.3s;
+}
+@media (any-hover: hover) {
+  .menu__item--parent:hover .sub-menu {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0px, 0px);
+    pointer-events: all;
+  }
+  .menu__item--parent:hover .menu__link::after {
+    transform: rotate(-180deg);
+  }
+}
+.sub-menu {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding-top: 5px;
+  transform: translate(0%, -20%);
+  /* Чудова властивість */
+  pointer-events: none;
+  transition: all 0.3s;
+}
+.sub-menu__list {
+  min-width: 300px;
+  border-radius: 10px;
+  border: 1px solid #fff9f4;
+  padding: 15px;
+  background-color: #0e333d;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.sub-menu__link {
+  font-size: 18px;
+  line-height: 140%;
+}
+.sub-menu__link:hover {
+  text-decoration-line: underline;
+}
+.sub-menu__item--title {
+  font-weight: 700;
+  margin-bottom: 10px;
+  border-bottom: 1px solid rgba(131, 131, 131, 0.21);
+  padding-bottom: 6px;
+  text-transform: uppercase;
+}
+.sub-menu__link {
+}
+.header__button {
+  color: #fff;
+  background: #0e333d;
+  border: 1px solid #fff9f4;
+  transition: all .3s;
+}
+.header__button:hover {
+  background-color: #fff9f4;
+  color: #0e333d;
+  border: 1px solid #0e333d;
+}
