--- a/lesson_18/css/components.css
+++ b/lesson_18/css/components.css
@@ -6,4 +6,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+}
+@media (max-width: 1040px) {
+  .button {
+      font-size: 16px;
+  padding: 10px 20px 10px 20px;
+  }
 }
