--- a/lesson_18/css/style.css
+++ b/lesson_18/css/style.css
@@ -15,13 +15,22 @@ body {
   overflow: clip;
   min-height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.wrapper > main {
+  flex-grow: 1;
+}
+.page {
+  display: flex;
+  flex-direction: column;
 }
 .main {
 }
 [class*="__container"] {
   max-width: 1215px;
   margin: 0 auto;
-  box-sizing: content-box;
+  /* box-sizing: content-box; */
   padding: 0 15px;
 }
 .footer {
@@ -35,7 +44,6 @@ body {
   align-items: center;
   border-bottom: 1px solid rgba(131, 131, 131, 0.21);
   width: 100%;
-  min-height: 106px;
   top: 0;
   left: 0;
   padding: 5px 0 5px;
@@ -56,9 +64,11 @@ body {
   font-style: italic;
   font-weight: 700;
   flex-shrink: 0;
+  z-index: 5;
 }
 .menu {
   flex: 1 1 auto;
+  /* position: relative; */
 }
 .menu__list {
   display: flex;
@@ -69,7 +79,7 @@ body {
 .menu__item {
 }
 .menu__link {
-  position: relative;
+  /* position: relative; */
   font-size: 20px;
   color: #000;
   transition: color 0.3s;
@@ -123,7 +133,7 @@ body {
   transition: all 0.3s;
 }
 .sub-menu__list {
-  min-width: 300px;
+  min-width: 100%;
   border-radius: 10px;
   border: 1px solid #fff9f4;
   padding: 15px;
@@ -135,10 +145,12 @@ body {
 }
 .sub-menu__link {
   font-size: 18px;
-  line-height: 140%;
 }
 .sub-menu__link:hover {
   text-decoration-line: underline;
+}
+.sub-menu__item:not(:last-child) {
+  margin-bottom: 10px;
 }
 .sub-menu__item--title {
   font-weight: 700;
@@ -149,14 +161,172 @@ body {
 }
 .sub-menu__link {
 }
-.header__button {
+.header__actions {
+  flex-shrink: 0;
+}
+.actions-header {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.actions-header__button {
   color: #fff;
   background: #0e333d;
+  border-radius: 5px;
   border: 1px solid #fff9f4;
-  transition: all .3s;
+  transition: all 0.3s;
 }
-.header__button:hover {
-  background-color: #fff9f4;
-  color: #0e333d;
-  border: 1px solid #0e333d;
+.icon-menu {
+  display: none;
+}
+@media (any-hover: hover) {
+  .actions-header__button:hover {
+    background-color: #fff9f4;
+    color: #0e333d;
+    border: 1px solid #0e333d;
+  }
+}
+@media (max-width: 1039.98px) {
+  .menu__list {
+    gap: 8px 26px;
+  }
+  .menu__link {
+    font-size: 18px;
+  }
+}
+@media (max-width: 939.98px) {
+  .header__container {
+    min-height: 50px;
+    border-bottom: 2px solid #fff;
+    padding-top: 0px;
+  }
+  .menu__body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    right: -100%;
+    top: 0;
+    overflow: auto; /* для скролу в бургері */
+    transition: right 0.3s;
+    padding: 80px 15px 30px 15px;
+    background-color: #3496b0;
+  }
+  .menu__body:before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    right: 100%;
+    z-index: 2;
+    background-color: rgba(14, 51, 61, 1);
+  }
+  .menu-open .menu__body,
+  .menu-open .menu__body::before {
+    right: 0;
+  }
+  .menu-open .header__logo {
+    color: #fff;
+  }
+  .menu-open .icon-menu:before,
+  .menu-open .icon-menu::after,
+  .menu-open .icon-menu span {
+    background-color: #fff;
+  }
+  .menu__list {
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 25px;
+  }
+  .menu__item--parent .menu__link {
+    padding-bottom: 10px;
+    display: block;
+  }
+  .menu__item--parent .menu__link::after {
+    display: none;
+  }
+  .menu__link {
+    font-size: 28px;
+  }
+  .sub-menu {
+    position: relative;
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0px, 0px);
+  }
+  .sub-menu__link {
+    font-size: 22px;
+  }
+
+  .header__logo {
+    font-size: 24px;
+    /* color: #fff; */
+    z-index: 1;
+  }
+  .actions-header__button {
+    z-index: 1;
+  }
+  .icon-menu {
+    width: 30px;
+    display: block;
+    flex: 0 0 30px;
+    height: 18px;
+    position: relative;
+    z-index: 5;
+  }
+  .icon-menu::before,
+  .icon-menu::after,
+  .icon-menu span {
+    content: "";
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    transition: all 0.3s;
+    background-color: #000;
+  }
+  .menu-open .icon-menu span {
+    transform: scale(0);
+  }
+  .menu-open .icon-menu::before {
+    transform: rotate(-45deg);
+    top: 50%;
+    margin-top: -1px;
+  }
+  .menu-open .icon-menu::after {
+    transform: rotate(45deg);
+    bottom: 50%;
+    margin-bottom: -1px;
+  }
+  .icon-menu span {
+    /* Рівняємо по висоті */
+    top: 50%;
+    margin-top: -1px;
+  }
+  .icon-menu::before {
+    top: 0;
+  }
+  .icon-menu::after {
+    bottom: 0;
+  }
+}
+@media (max-width: 439.98px) {
+  .header__container {
+    gap: 5px;
+  }
+  .menu__link {
+    font-size: 24px;
+  }
+  .sub-menu__item--title {
+    font-size: 18px;
+  }
+  .sub-menu__link {
+    font-size: 16px;
+  }
+  .sub-menu__item:not(:last-child) {
+    margin-bottom: 5px;
+  }
+  .actions-header {
+    gap: 10px;
+  }
 }
