--- a/lesson_18/css/style.css
+++ b/lesson_18/css/style.css
@@ -25,8 +25,6 @@ body {
   display: flex;
   flex-direction: column;
 }
-.main {
-}
 [class*="__container"] {
   max-width: 1215px;
   margin: 0 auto;
@@ -42,6 +40,7 @@ body {
   position: fixed;
   display: flex;
   align-items: center;
+  background-color: #fff9f4;
   border-bottom: 1px solid rgba(131, 131, 131, 0.21);
   width: 100%;
   top: 0;
@@ -133,7 +132,7 @@ body {
   transition: all 0.3s;
 }
 .sub-menu__list {
-  min-width: 100%;
+  min-width: 300px;
   border-radius: 10px;
   border: 1px solid #fff9f4;
   padding: 15px;
@@ -181,9 +180,15 @@ body {
 }
 @media (any-hover: hover) {
   .actions-header__button:hover {
+    position: relative;
     background-color: #fff9f4;
     color: #0e333d;
     border: 1px solid #0e333d;
+    box-shadow: 0 0.5em 0.5em -0.4em #000;
+  }
+  .actions-header__button:active {
+    top: 5px;
+    box-shadow: none;
   }
 }
 @media (max-width: 1039.98px) {
@@ -254,10 +259,12 @@ body {
     opacity: 1;
     transform: translate(0px, 0px);
   }
+  .sub-menu__list {
+    min-width: 100%;
+  }
   .sub-menu__link {
     font-size: 22px;
   }
-
   .header__logo {
     font-size: 24px;
     /* color: #fff; */
@@ -328,5 +335,180 @@ body {
   }
   .actions-header {
     gap: 10px;
+  }
+}
+
+/* Page */
+.page {
+  font-family: "DM Serif Text", sans-serif;
+  margin-top: 110px;
+}
+.page__hero {
+}
+.hero__container {
+  display: flex;
+  flex: 0 1 auto;
+  gap: 86px;
+}
+.hero {
+  padding: 100px 0 140px 0;
+  display: flex;
+  align-items: center;
+}
+.hero__body {
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 577px;
+  /* max-width: 580px; */
+}
+.hero__title {
+  color: #0e333d;
+  font-size: 78px;
+  line-height: 127%; /* 99.06px */
+  margin-bottom: 32px;
+}
+@media (max-width: 1155px) {
+  .hero__container {
+    gap: 40px;
+  }
+  .hero__title {
+    font-size: 60px;
+  }
+}
+.hero__text {
+  color: #727272;
+  font-family: "Inter";
+  font-size: 22px;
+  line-height: 148%; /* 32.56px */
+  margin-bottom: 48px;
+}
+.hero__text p:not(:last-child) {
+  margin-bottom: 15px;
+}
+.hero__links {
+  display: flex;
+  align-items: center;
+  gap: 47px;
+}
+.hero__link {
+  display: flex;
+  flex-shrink: 0;
+}
+.hero__link--btn,
+.hero__link--link {
+  font-size: 28px;
+  color: #0e333d;
+  transition: outline 0.1s, box-shadow 0.2s ease;
+  line-height: 150%;
+}
+.hero__link--btn {
+  padding: 10px 37.5px;
+  border-radius: 5px;
+  background-color: #0e333d;
+  color: #fff;
+}
+.hero__link--link {
+  border-bottom: 2px solid #000;
+}
+@media (any-hover: hover) {
+  .hero__link--btn:hover,
+  .hero__link--link:hover {
+    position: relative;
+    box-shadow: 0 0.5em 0.5em -0.4em #000;
+  }
+  .hero__link--link:hover {
+    right: 8px;
+    padding: 8px;
+    border-radius: 5px;
+    border-bottom: 2px solid transparent;
+    outline: 2px solid #000;
+  }
+  .hero__link--link:active,
+  .hero__link--btn:active {
+    top: 5px;
+    box-shadow: none;
+  }
+}
+.hero__images {
+  display: flex;
+  flex: 0 1 522px;
+  justify-content: space-between;
+  column-gap: 15px;
+}
+.hero__image {
+  flex-basis: 50%;
+  flex: 0 1 245px;
+}
+.hero__image img {
+  object-fit: cover;
+  aspect-ratio: 246 / 467;
+  width: 100%;
+  height: 100%;
+}
+.image {
+}
+.hero__image--bottom {
+  margin-top: 69px;
+}
+.hero__image--top {
+  margin-bottom: 69px;
+}
+@media (max-width: 940px) {
+  .page {
+    margin-top: 0px;
+  }
+  .hero__container {
+    flex-direction: column;
+  }
+  .hero__body {
+    text-align: center;
+    flex: 0 0 auto;
+  }
+
+  .hero__images {
+    justify-content: center;
+  }
+  .hero__links {
+    justify-content: center;
+    gap: 30px;
+  }
+  .hero__link--btn {
+    padding: 10px 30px;
+  }
+}
+@media (max-width: 540px) {
+  .hero {
+    padding-top: 70px;
+    padding-bottom: 50px;
+  }
+  .hero__container {
+    gap: 25px;
+  }
+  .hero__title {
+    font-size: 44px;
+    margin-bottom: 15px;
+  }
+  .hero__text {
+    margin-bottom: 25px;
+  }
+  .hero__link--btn {
+    padding: 10px 20px;
+  }
+  .hero__link {
+    font-size: 20px;
+  }
+  .hero__images {
+    display: block;
+  }
+  .hero__image:not(:last-child) {
+    margin-bottom: 15px;
+  }
+  .hero__image--bottom,
+  .hero__image--top {
+    margin: 0;
+  }
+}
+@media (max-width: 400px) {
+  .hero__link {
   }
 }
