--- a/lesson_18/css/style.css
+++ b/lesson_18/css/style.css
@@ -378,7 +378,6 @@ body {
 .hero__text {
   color: #727272;
   font-family: "Inter";
-  font-size: 22px;
   line-height: 148%; /* 32.56px */
   margin-bottom: 48px;
 }
@@ -510,5 +509,283 @@ body {
 }
 @media (max-width: 400px) {
   .hero__link {
+  }
+}
+
+/* jewellery */
+.jewellery {
+  padding: 98px 0 58px 0;
+  background-color: #502203;
+  font-family: "Cormorant Infant", sans-serif;
+  position: relative;
+}
+.jewellery__container {
+  display: flex;
+  flex: 1 1 auto;
+  align-items: flex-start;
+}
+.jewellery__body {
+  flex: 1 0 31.625%;
+  padding: 57px 30px 0 0;
+}
+.jewellery__body > * {
+  margin-bottom: 9px;
+}
+.jewellery__title {
+  color: #fff;
+  font-size: 78px;
+  font-weight: 700;
+  line-height: 129%; /* 100.62px */
+}
+.jewellery__links {
+}
+.jewellery__link {
+  position: relative;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 100%; /* 24px */
+  border-radius: 4px;
+  border: 1px solid #fff;
+  padding: 15px 25px;
+}
+.jewellery__link:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 12px;
+  left: -8px;
+  border-radius: 4px;
+  background: rgba(255, 255, 255, 0.06);
+  transition: all 0.3s;
+}
+@media (any-hover: hover) {
+  .jewellery__link:hover:before {
+    top: 0px;
+    left: 0px;
+    box-shadow: 0 0.5em 0.5em -0.4em #fff;
+  }
+  .jewellery__link:active {
+    top: 5px;
+  }
+  .jewellery__link:active:before {
+    box-shadow: none;
+  }
+}
+.jewellery__image {
+  flex: 0 1 36.75%;
+  border-radius: 215px;
+  border: 1px solid #fff;
+  padding: 20px;
+}
+.jewellery__image img {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 390 / 554;
+  border-radius: 215px;
+  overflow: hidden;
+}
+.jewellery__content {
+  display: flex;
+  flex: 0 0 32.2%;
+  align-self: stretch;
+  flex-direction: column;
+  gap: 20px;
+  padding: 76px 0 0 23px;
+}
+.jewellery__text {
+  color: #fff;
+  font-weight: 700;
+  line-height: 148%; /* 32.56px */
+  max-width: 312px;
+  flex-grow: 1;
+}
+.jewellery__item {
+  position: relative;
+  color: #fff;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 120%; /* 38.4px */
+  display: flex;
+  align-self: flex-end;
+
+  margin-bottom: 183px;
+  padding-left: 10px;
+}
+.jewellery__item::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border-left: 1px solid #fff;
+}
+.jewellery__item span {
+  display: block;
+}
+.footer {
+  background-color: #0e333d;
+  color: #fff;
+  font-size: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 1105px) {
+  .jewellery__title {
+    font-size: 60px;
+  }
+}
+@media (max-width: 940px) {
+  .jewellery {
+    padding: 50px 0 25px 0;
+  }
+  .jewellery__container {
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: space-between;
+  }
+  .jewellery__body {
+    flex-basis: 100%;
+    text-align: center;
+    padding: 0;
+  }
+  .jewellery__image {
+    flex-basis: 45%;
+  }
+  .jewellery__content {
+    flex-basis: 45%;
+  }
+  .jewellery__content {
+    padding: 50px 0 0 0;
+  }
+  .jewellery__item {
+    margin-bottom: 100px;
+  }
+  .footer {
+    height: 100px;
+  }
+}
+@media (max-width: 599.98px) {
+  .jewellery__body > * {
+    margin-bottom: 25px;
+  }
+  .jewellery__title {
+    font-size: 48px;
+  }
+  .jewellery__text {
+    font-size: 18px;
+  }
+  .jewellery__item {
+    font-size: 24px;
+  }
+  .footer {
+    font-size: 30px;
+  }
+}
+@media (max-width: 479.98px) {
+  .jewellery {
+    padding: 50px 0 50px 0;
+  }
+  .jewellery__title {
+    font-size: 34px;
+  }
+
+  .jewellery__image {
+    flex-basis: 100%;
+  }
+  .jewellery__content {
+    flex-basis: 100%;
+  }
+  .jewellery__text {
+    max-width: 100%;
+  }
+  .jewellery__item {
+    align-self: flex-start;
+  }
+  .jewellery__content {
+    padding: 0;
+  }
+  .jewellery__item {
+    margin-bottom: 0px;
+  }
+  .footer {
+    height: 70px;
+  }
+}
+
+/* Decor */
+.jewellery__decor-background {
+  display: none;
+}
+@media (min-width: 1450px) {
+  .jewellery__decor-background {
+    display: block;
+  }
+  .jewellery__left-decor,
+  .jewellery__right-decor {
+    position: absolute;
+  }
+  .jewellery__left-decor {
+    left: -10px;
+    top: -90px;
+  }
+  .jewellery__right-decor {
+    right: 0;
+    bottom: 115px;
+  }
+}
+.jewellery__image-background {
+  display: none;
+}
+@media (min-width: 1550px) {
+  .jewellery__image-background {
+    display: block;
+  }
+  .jewellery__bottom-bg,
+  .jewellery__right-bg {
+    position: absolute;
+  }
+  .jewellery__bottom-bg {
+    width: 239px;
+    height: 215px;
+    bottom: 0;
+    left: 44px;
+  }
+  .jewellery__bottom-bg img {
+    border-radius: 195px 195px 0px 0px;
+    aspect-ratio: 563 / 858;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: relative;
+  }
+  .jewellery__bottom-bg::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    right: 7px;
+    bottom: 5px;
+    border: 1px solid #fff;
+    border-radius: 195px 195px 0px 0px;
+  }
+  .jewellery__right-bg {
+    padding: 17px 12px;
+    border-radius: 215px;
+    border: 1px solid #fff;
+    width: 261px;
+    height: 371px;
+    bottom: 55px;
+    right: -100px;
+  }
+  .jewellery__right-bg img {
+    border-radius: 195px;
+    aspect-ratio: 237 / 337;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
