--- a/lesson_19/css/style.css
+++ b/lesson_19/css/style.css
@@ -5,7 +5,7 @@
 html,
 body {
   height: 100%;
-  font-family: "Causten";
+  font-family: "Core Sans C";
   font-size: 18px;
   color: #807d7e;
   width: auto;
@@ -19,7 +19,7 @@ body {
 .main {
 }
 [class*="__container"] {
-  max-width: 1200px;
+  max-width: 1270px;
   margin: 0 auto;
   box-sizing: content-box;
   padding: 0 15px;
@@ -27,4 +27,120 @@ body {
 .footer {
   height: 200px;
 }
+
 /* ================================================ */
+.header {
+  border-bottom: 1px solid #bebcbd;
+}
+.header__navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 30px;
+  min-height: 108px;
+}
+.header__logo {
+}
+.menu {
+  display: flex;
+  flex: 0 1 auto;
+  column-gap: 40px;
+}
+.menu__item:hover {
+
+}
+.menu__link {
+  color: #807d7e;
+  font-family: "Causten";
+  font-size: 22px;
+  font-weight: 500;
+    position: relative;
+  text-decoration: none;
+  transition: color 0.3s;
+  padding-bottom: 5px;
+}
+.menu__active {
+  color: #3c4242;
+  font-weight: 700;
+}
+
+.menu__link {
+
+}
+
+.menu__link::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px; /* Товщина підкреслення */
+  bottom: 0;
+  left: 0;
+  background-color: #807d7e; /* Колір підкреслення */
+  transition: width 0.3s; /* Плавна зміна ширини підкреслення */
+}
+.menu__link:hover::before {
+  width: 100%;
+}
+
+
+.header__form {
+  position: relative;
+  display: flex;
+  background-color: #f6f6f6;
+  border-radius: 8px;
+  flex: 0 1 287px;
+}
+.header__input {
+  background-color: #f6f6f6;
+  border-radius: 8px;
+  font-size: 18px;
+  padding: 12px 20px 12px 52px;
+}
+.header__input:focus {
+  border-color: #8a33fd;
+  outline: none;
+  box-shadow: 0 0 5px rgba(138, 51, 253);
+}
+.header__button {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.header__input:focus + .header__button img {
+  animation: zoomInOut 1s infinite alternate;
+}
+@keyframes zoomInOut {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.4);
+  }
+}
+.header__actions {
+}
+.actions-header {
+}
+.actions-header__list {
+  display: flex;
+  gap: 12px;
+}
+.actions-header__item {
+  background-color: #f6f6f6;
+  border-radius: 8px;
+  transition: all .3s;
+}
+.actions-header__link {
+  padding: 12px;
+}
+.actions-header__item .actions-header__link img {
+  transition: transform .3s ease-in-out;
+}
+.actions-header__item:hover .actions-header__link img{
+  transform: scale(1.3);
+}
+.actions-header__item:hover {
+  box-shadow: 0 0 5px rgb(178, 177, 178);
+}
