--- a/lesson_19/css/style.css
+++ b/lesson_19/css/style.css
@@ -140,3 +140,90 @@ body {
     display: none;
   }
 }
+/* ========================================= */
+.stock__container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  margin-top: 130px;
+}
+.stock__item {
+}
+.item-stock {
+  position: relative;
+  overflow: hidden;
+  overflow: clip;
+  border-radius: 12px;
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.4);
+  padding: 57px 0 55px 30px;
+}
+.item-stock__bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.item-stock__bg img {
+  aspect-ratio: 605 / 356;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+}
+.item-stock__body {
+  font-family: "Core Sans C";
+  color: #fff;
+  font-weight: 800;
+
+  position: relative;
+  max-width: 264px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 30px;
+  height: 100%;
+}
+.item-stock__content {
+  flex-grow: 1;
+}
+.item-stock__label {
+  font-family: "Montserrat";
+  font-size: 18px;
+  line-height: 30.067px; /* 167.038% */
+  letter-spacing: 0.251px;
+}
+.item-stock__label:not(:last-child) {
+  margin-bottom: 24px;
+}
+.item-stock__title {
+  font-size: 34px;
+  line-height: 45.1px; /* 132.648% */
+}
+.item-stock__title:not(:last-child) {
+  margin-bottom: 10px;
+}
+.item-stock__discount {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 25.056px; /* 156.598% */
+  letter-spacing: 0.251px;
+  margin-bottom: 30px;
+}
+.item-stock__discount:not(:last-child) {
+  margin-bottom: 30px;
+}
+.item-stock__link {
+  font-size: 20px;
+  line-height: 30.132px; /* 150.66% */
+  text-decoration-line: underline;
+}
+@media (max-width: 992px) {
+  .stock__container {
+    margin-top: 60px;
+  }
+  .stock__container {
+  grid-template-columns: repeat(1, 1fr);
+}
+}
